<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingRight="5px">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
            <TextView
                android:layout_width="60sp"
                android:layout_height="wrap_content"
                android:text="@string/name" />
            <EditText android:id="@+id/edit_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
            <TextView
                android:layout_width="60sp"
                android:layout_height="wrap_content"
                android:text="@string/sex" />
            <RadioGroup android:id="@+id/radiogroup_sex"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <RadioButton android:id="@+id/radio_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="남" />
                <RadioButton android:id="@+id/radio_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="여" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
            <TextView
                android:layout_width="60sp"
                android:layout_height="wrap_content"
                android:text="@string/receive" />
            <CheckBox android:id="@+id/check_pregnant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="임신" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
            <TextView
                android:layout_width="60sp"
                android:layout_height="wrap_content"
                android:text="@string/birthday" />
            <EditText android:id="@+id/edit_birthday"
                android:enabled="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="60sp"
                android:layout_height="wrap_content"
                android:text="@string/bloodtype"/>
            <Spinner
                android:id="@+id/spinner_bloodtype"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></Spinner>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/allergy" />
            <EditText
                android:id="@+id/edit_allergy"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/precaution" />
            <EditText android:id="@+id/edit_precaution"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/protector" />
            <EditText
                android:id="@+id/edit_protector"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:inputType="phone" />
        </LinearLayout>

        <!-- 버튼: 시작 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <Button android:id="@+id/button_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="취소" />
                <Button android:id="@+id/button_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="삭제" />
            </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="right"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
            <Button android:id="@+id/button_store"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="수정" />

        </LinearLayout>
        </LinearLayout>
        <!-- 버튼: 끝 -->
    </LinearLayout>

</ScrollView>